Resolved deprecations